WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
31488
DOMHTMLOptionsCollection is missing some implementation
https://bugs.webkit.org/show_bug.cgi?id=31488
Summary
DOMHTMLOptionsCollection is missing some implementation
Jon Honeycutt
Reported
2009-11-13 13:53:09 PST
All of the DOMHTMLOptionsCollection functions are stubs.
Attachments
patch
(6.42 KB, patch)
2009-11-13 14:15 PST
,
Jon Honeycutt
mitz: review+
jhoneycutt
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jon Honeycutt
Comment 1
2009-11-13 14:15:03 PST
Created
attachment 43199
[details]
patch
mitz
Comment 2
2009-11-14 16:20:54 PST
Comment on
attachment 43199
[details]
patch
> + if (index >= m_collection->length()) > + return E_FAIL; > + > + *result = DOMNode::createInstance(m_collection->item(index)); > + return S_OK;
Can you just let HTMLOptionsCollection::item() return 0 and then null-check the result instead of bounds-checking index? It would be more like DOMHTMLCollection::item(). r=me either way
Jon Honeycutt
Comment 3
2009-11-17 15:40:06 PST
I made Dan's change. Landed in
r51091
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug