third_party/WebKit/WebKit/win/DOMHTMLClasses.h
@@ -35,6 +35,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 namespace WebCore {
     class HTMLCollection;
+    class HTMLOptionsCollection;
 }
 
 class DOMHTMLCollection : public DOMObject, public IDOMHTMLCollection
@@ -100,6 +101,9 @@ protected:
 
 class DOMHTMLOptionsCollection : public DOMObject, public IDOMHTMLOptionsCollection
 {
+public:
+    static IDOMHTMLOptionsCollection* createInstance(WebCore::HTMLOptionsCollection*);
+
     // IUnknown
     virtual HRESULT STDMETHODCALLTYPE QueryInterface(REFIID riid, void** ppvObject);
     virtual ULONG STDMETHODCALLTYPE AddRef(void) { return DOMObject::AddRef(); }
@@ -150,7 +154,12 @@ class DOMHTMLOptionsCollection : public DOMObject, public IDOMHTMLOptionsCollect
     
     virtual HRESULT STDMETHODCALLTYPE namedItem( 
         /* [in] */ BSTR name,
-        /* [retval][out] */ IDOMNode *result);
+        /* [retval][out] */ IDOMNode **result);
+
+private:
+    DOMHTMLOptionsCollection(WebCore::HTMLOptionsCollection*);
+
+    RefPtr<WebCore::HTMLOptionsCollection> m_collection;
 };
 
 class DOMHTMLDocument : public DOMDocument, public IDOMHTMLDocument
